# C

./: bubble_sort.c  calc.c  list.c  pointery.c  swap.c
03_static/: bubble_sort.c  dec2bin.c  float2bin.c
04_list/: calc.c  pointers.c  swap.c
05_bvs/: inc_test.c
05_bvs/bst/: Makefile  bst.c  bst.h  tree.c
06_matrix/spirals/src/: spirals.c
06_matrix/spirals/src/matrix/: matrix.h
07_stack/stack/src/: operators.c  operators.h  parser.c
07_stack/stack/src/stack/: stack.c  stack.h
08_vector/vector/src/: loader_examples.c  person.c  vector.c  vector.h
09_linvsbvs/search_experiment/: CMakeLists.txt  Makefile
09_linvsbvs/search_experiment/data/: find.txt
09_linvsbvs/search_experiment/src/: config.h
09_linvsbvs/search_experiment/src/searchers/: searchers.c  searchers.h
10_debugger/cracking/: CMakeLists.txt
10_debugger/qsortdemo/: CMakeLists.txt
10_debugger/qsortdemo/misc/: CMakeLists.txt  stack_size.c  stack_size.s
10_debugger/qsortdemo/src/: qsortdemo.c
drill/: drill  drill.c
spirals/: Makefile
spirals/src/: spiral  spiral.m  spirals.c
spirals/src/matrix/: matrix.c  matrix.h
sudoku/: Makefile  easy.sud  hard.sud  sudoku.c  sudoku.h  sudos.c
vector/src/: config.h  loader_examples.c  loader_examples.h  main.c  person.h  vector.c  vector.h
